Project

General

Profile

Actions

Bug #13497

closed

libresolv: symbol 'h_errno' is multiply-defined

Added by Toomas Soome over 2 years ago. Updated over 2 years ago.

Status:
Closed
Priority:
Normal
Assignee:
Category:
lib - userland libraries
Start date:
Due date:
% Done:

100%

Estimated time:
Difficulty:
Bite-size
Tags:
Gerrit CR:
External Bug:

Description

Build errors with gcc 10:

ld: fatal: symbol 'h_errno' is multiply-defined:
        (file pics/res_gethost.o type=OBJT; file pics/res_query.o type=OBJT);
ld: fatal: file processing errors. No output written to libresolv.so.1
collect2: error: ld returned 1 exit status

Testing done: build/install/boot.

Actions #1

Updated by Electric Monk over 2 years ago

  • Gerrit CR set to 1212
Actions #2

Updated by Toomas Soome over 2 years ago

  • Description updated (diff)
Actions #3

Updated by Electric Monk over 2 years ago

  • Status changed from In Progress to Closed
  • % Done changed from 90 to 100

git commit f4fe62a3c26a7b15283589c57a3c10ed9695b529

commit  f4fe62a3c26a7b15283589c57a3c10ed9695b529
Author: Toomas Soome <tsoome@me.com>
Date:   2021-02-08T15:06:16.000Z

    13497 libresolv: symbol 'h_errno' is multiply-defined
    Reviewed by: Rich Lowe <richlowe@richlowe.net>
    Reviewed by: Marcel Telka <marcel@telka.sk>
    Approved by: Dan McDonald <danmcd@joyent.com>

Actions

Also available in: Atom PDF