13497 libresolv: symbol 'h_errno' is multiply-defined Reviewed by: Rich Lowe <richlowe@richlowe.net> Reviewed by: Marcel Telka <marcel@telka.sk> Approved by: Dan McDonald <danmcd@joyent.com>