usr/src/lib/libresolv/res_query.c
@@ -26,7 +26,7 @@
  */
 
 /*	Copyright (c) 1984, 1986, 1987, 1988, 1989 AT&T	*/
-/*	  All Rights Reserved  	*/
+/*	  All Rights Reserved	*/
 
 /*
  * University Copyright- Copyright (c) 1982, 1986, 1988
@@ -57,8 +57,6 @@
 #else
 #define	MAXPACKET	1024
 #endif
-
-int h_errno;
 
 /*
  * Formulate a normal query, send, and await answer.
